# liburkel-node

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json
.github/workflows/: node.js.yml  node.yml
bench/: tree.js  util.js
lib/: blake2b-browser.js  blake2b.js  common.js  index.js  memory.js  nurkel.js  proof.js  tree.js  types.js  urkel.js  util.js
patches/: .patches  README.md  no-mmap.patch  npmignore.patch  pr-10-stats.patch  pr-11-store-has-history.patch  pr-8-fix-nodes  pr-9-compact  pr-9-compact.patch
scripts/: patch.sh  unpatch.sh
src/: blake2b.c  blake2b.h  common.c  common.h  nurkel.c  transaction.c  transaction.h  tree.c  tree.h  util.c  util.h
test/: blake2b-test.js  iterator-test.js  open-test.js  proof-test.js  transaction-gc-test.js  transaction-segfault-test.js  transaction-test.js  tree-cleanup-test.js  tree-debug-test.js  tree-gc-test.js  tree-test.js  urkel-test.js  vtx-test.js
test/data/: blake2b-urkel.json
test/util/: common.js  worker.js
